Correct location spelling from 'Geoergetown' to 'Georgetown'

--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
   name             : "Samuel Warren"
   avatar           : "profile.jpeg"
   bio              : "Failed philosopher turned technology explorer."
-  location         : "Geoergetown, TX"
+  location         : "Georgetown, TX"
   email            :
   links:
     - label: "Email"
